--- a/WebThuvien/Views/Admin/DSHoatdong.cshtml
+++ b/WebThuvien/Views/Admin/DSHoatdong.cshtml
@@ -47,7 +47,7 @@
                             </td>
                             <td>
                                 <div class="table-actions">
-                                    <a href="/Admin/Chitiethoatdong?mahoatdong=@item.MABAIDANG" data-color="#265ed7"><i class="icon-copy dw dw-edit2"></i></a>
+                                    <a href="/Admin/Chitiethoatdong?ID=@item.MABAIDANG" data-color="#265ed7"><i class="icon-copy dw dw-edit2"></i></a>
                                     <a data-hd="@item.MABAIDANG" data-color="#e95959"><i class="icon-copy dw dw-delete-3"></i></a>
                                 </div>
                             </td>
