--- a/WebThuvien/Views/Admin/Index.cshtml
+++ b/WebThuvien/Views/Admin/Index.cshtml
@@ -15,7 +15,7 @@
                 <div class="card-box height-100-p widget-style3">
                     <div class="d-flex flex-wrap">
                         <div class="widget-data">
-                            <div class="weight-700 font-24 text-dark">75</div>
+                            <div class="weight-700 font-24 text-dark">@ViewBag.Soluongsach</div>
                             <div class="font-14 text-secondary weight-500">Sách</div>
                         </div>
                         <div class="widget-icon">
@@ -28,7 +28,7 @@
                 <div class="card-box height-100-p widget-style3">
                     <div class="d-flex flex-wrap">
                         <div class="widget-data">
-                            <div class="weight-700 font-24 text-dark">124</div>
+                            <div class="weight-700 font-24 text-dark">@ViewBag.Soluongbandoc</div>
                             <div class="font-14 text-secondary weight-500">Bạn đọc</div>
                         </div>
                         <div class="widget-icon">
@@ -41,8 +41,8 @@
                 <div class="card-box height-100-p widget-style3">
                     <div class="d-flex flex-wrap">
                         <div class="widget-data">
-                            <div class="weight-700 font-24 text-dark">400+</div>
-                            <div class="font-14 text-secondary weight-500">Lượt truy cập tuần</div>
+                            <div class="weight-700 font-24 text-dark">@ViewBag.Soluongbaidangthang</div>
+                            <div class="font-14 text-secondary weight-500">Bài đăng trong tháng</div>
                         </div>
                         <div class="widget-icon">
                             <div class="icon"><i class="icon-copy fa fa-stethoscope" aria-hidden="true"></i></div>
@@ -54,7 +54,7 @@
                 <div class="card-box height-100-p widget-style3">
                     <div class="d-flex flex-wrap">
                         <div class="widget-data">
-                            <div class="weight-700 font-24 text-dark">50,000</div>
+                            <div class="weight-700 font-24 text-dark">@ViewBag.Soluongquahan</div>
                             <div class="font-14 text-secondary weight-500">Lượt quá hạn</div>
                         </div>
                         <div class="widget-icon">
