--- a/WebThuvien/Views/Admin/Danhmucsachmuon.cshtml
+++ b/WebThuvien/Views/Admin/Danhmucsachmuon.cshtml
@@ -17,12 +17,15 @@
                         <th>Hình ảnh</th>
                         <th>Người mượn</th>
                         <th>Ngày mượn</th>
+                        <th>TG mượn</th>
                     </tr>
                 </thead>
                 <tbody>
                     @{ int STT = 0;}
                     @foreach (var item in @ViewBag.listsachmuon as List<WebThuvien.Models.CustomClass.ChitietSachmuon>)
                     {
+                        string ngaymuon = item.NGAYMUON.Value.Day + "/" + item.NGAYMUON.Value.Month + "/" + item.NGAYMUON.Value.Year;
+
                         STT = STT + 1;
                         <tr>
                             <td class="table-plus">
@@ -38,7 +41,9 @@
                                 </div>
                             </td>
                             <td><p title="Tên chủ thẻ : @item.NGUOIMUON">@item.MATHENGUOIMUON</p></td>
-                            <td>@item.NGAYMUON</td>
+                            <td>@ngaymuon</td>
+                            <td>@item.THOIGIANMUON ngày</td>
+
                         </tr>
                     }
 
