--- a/WebThuvien/Views/Admin/Themhoatdong.cshtml
+++ b/WebThuvien/Views/Admin/Themhoatdong.cshtml
@@ -18,7 +18,7 @@
                     <div class="col-md-12 col-sm-12">
                         <div class="form-group">
                             <label>Tiêu đề</label>
-                            <input name="TIEUDE" type="text" class="form-control">
+                            <input required name="TIEUDE" type="text" class="form-control">
                         </div>
                     </div>
                 </div>
@@ -26,7 +26,7 @@
                     <div class="col-md-12 col-sm-12">
                         <div class="form-group">
                             <label>Địa điểm</label>
-                            <input name="DIADIEM" type="text" class="form-control">
+                            <input required name="DIADIEM" type="text" class="form-control">
                         </div>
                     </div>
                 </div>
@@ -34,13 +34,13 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
                             <label>Thời gian bắt đầu</label>
-                            <input name="THOIGIANBATDAU" type="date" class="form-control">
+                            <input required name="THOIGIANBATDAU" type="date" class="form-control">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
                             <label>Thời gian kết thúc</label>
-                            <input name="THOIGIANKETTHUC" class="form-control" type="date">
+                            <input required name="THOIGIANKETTHUC" class="form-control" type="date">
                         </div>
                     </div>
 
@@ -49,13 +49,15 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
                             <label>Hình ảnh 1</label>
-                            <input name="hinhanh1" type="file" class="form-control" accept="image/*">
+                            <input id="hinhanh1" required name="hinhanh1" type="file" class="form-control" accept="image/*">
+                            <img id="ha1" src="" />
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
                             <label>Hình ảnh 2</label>
-                            <input name="hinhanh2" class="form-control" type="file" accept="image/*">
+                            <input id="hinhanh2" name="hinhanh2" class="form-control" type="file" accept="image/*">
+                            <img id="ha2" src="" />
                         </div>
                     </div>
 
@@ -65,7 +67,7 @@
                         <div class="form-group">
                             <div class="html-editor pd-20 card-box mb-30">
                                 <p>Nội dung</p>
-                                <textarea name="NOIDUNG" class="form-control"></textarea>
+                                <textarea required name="NOIDUNG" class="form-control"></textarea>
                             </div>
                         </div>
                     </div>
@@ -85,3 +87,25 @@
     </div>
 </div>
 
+
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+
+<script>
+    function readURL(input,str) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#'+str).attr('src', e.target.result);
+            }
+            reader.readAsDataURL(input.files[0]); // convert to base64 string
+        }
+    }
+
+    $("#hinhanh1").change(function () {
+        readURL(this,'ha1');
+    });
+    $("#hinhanh2").change(function () {
+        readURL(this, 'ha2');
+    });
+</script>
