--- a/WebThuvien/Views/Admin/Sach.cshtml
+++ b/WebThuvien/Views/Admin/Sach.cshtml
@@ -30,11 +30,11 @@
                             </td>
                             <td>@item.MASACH</td>
                             <td>@item.TENSACH</td>
-                            <td>@item.TACGIA.TENTACGIA</td>
+                            <td><textarea readonly style="border:none">@item.TACGIA.TENTACGIA</textarea></td>
                             <td>
                                 <div class="name-avatar d-flex align-items-center">
                                     <div class="avatar mr-2 flex-shrink-0">
-                                        <img src="~/Content/ClientContent/images/Books/@item.HINHANH" class="border-radius-100 shadow" width="60" height="60" alt="hình ảnh">
+                                        <img src="~/Content/ClientContent/images/Books/@item.HINHANH" width="60" height="60" alt="hình ảnh">
                                     </div>
                                 </div>
                             </td>
