--- a/WebThuvien/Views/Admin/Timkiemsach.cshtml
+++ b/WebThuvien/Views/Admin/Timkiemsach.cshtml
@@ -30,9 +30,9 @@
                             </td>
                             <td>@item.MASACH</td>
                             <td>@item.TENSACH</td>
-                            <td>
+                            <td style="max-width:200px">
                                 
-		                        <p>@item.TENTACGIA</p>
+		                        <text class="wordWrap">@item.TENTACGIA</text>
                                 
                             </td>
                             <td>
