--- a/WebThuvien/Views/Admin/Timkiemsach.cshtml
+++ b/WebThuvien/Views/Admin/Timkiemsach.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Tìm kiếm : "+ ViewBag.noidungnhap;
+    ViewBag.Title = "Tìm kiếm : "+ ViewBag.noidungnhap +",Lĩnh vực : " + ViewBag.linhvuc + " , Loaị sách : " + ViewBag.loaisach +", Tác giả : "+ ViewBag.tacgia;
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
