--- a/WebThuvien/Views/Admin/XemChiTietSach.cshtml
+++ b/WebThuvien/Views/Admin/XemChiTietSach.cshtml
@@ -8,10 +8,9 @@
     <div class="xs-pd-20-10 pd-ltr-20">
         <div class="title pb-10">
             <h2 class="h3 mb-0"> @ViewBag.Sach.TENSACH </h2>
-            <div  style="max-height:350px;max-width:350px;" class="card card-box">
-                <img class="card-img-top" src="~/Content/ClientContent/images/Books/@ViewBag.Sach.HINHANH" alt="Hình ảnh sách">
+            <div class="card card-box">
+                <img width="500" height="200" class="card-img-top" src="~/Content/ClientContent/images/Books/@ViewBag.Sach.HINHANH" alt="Hình ảnh sách">
             </div>
-            <div style="height:100px"></div>
         </div>
 
         <div class="xs-pd-20-10 pd-ltr-20">
